# wasap-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  PRODUCT_PLAN.md  README.md  SETUP.md  docker-compose.yml  fix_nvidia.sh  manual_testing_guide.md  parsed_comments.md  pr_comments.json  pyproject.toml  requirements-ai-review.txt  requirements.txt
.agent/rules/: gobal_rules
.agent/workflows/: rebuild.md
.github/workflows/: ai-review.yml  ci.yml
app/: config.py  dependencies.py  logging_config.py  main.py  models.py  test_regex.py  test_regex2.py
app/agent/: __init__.py  hitl.py  loop.py  models.py  persistence.py  planner.py  task_memory.py  workers.py
app/audio/: transcriber.py
app/commands/: builtins.py  context.py  parser.py  registry.py
app/context/: __init__.py  context_builder.py  conversation_context.py  fact_extractor.py  token_estimator.py
app/database/: db.py  (+1 more)
docs/: OLLAMA_MODELS.md
scripts/: ai_pr_description.py  ai_reviewer.py  run_eval.py
tests/: conftest.py  test_agent.py  test_agent_tracing.py  test_calculator_tools.py  test_commands.py  test_compaction.py  test_consolidator.py  test_context_builder.py  test_context_windowing.py  test_conversation.py  test_daily_log.py  test_datetime_tools.py  test_embeddings.py  test_embeddings_indexer.py  test_eval_coupled_versioning.py  test_eval_tools.py  test_formatting.py  test_guardrails.py  test_health.py  test_logging.py  test_markdown_memory.py  test_mcp_manager.py  test_memory_flush.py  test_memory_watcher.py  test_news_tools.py  test_notes_tools.py  test_ollama_client.py  test_parser.py  test_platform_adapter.py  test_profiles.py  test_prompt_catalog_command.py  test_prompt_registry.py  test_rate_limiter.py  test_reaction_curation.py  test_repository.py  test_scheduler_tools.py  test_search_tools.py  test_security.py  test_semantic_notes.py  test_semantic_search.py  (+22 more)
(+214 files in other folders)
