[project]
name = "wasap"
version = "0.1.0"
description = "Personal WhatsApp assistant powered by a local LLM (Ollama)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "pydantic-settings>=2.7",
    "aiosqlite>=0.21",
    "python-json-logger>=3.0",
    "faster-whisper>=1.1.0",
    "duckduckgo-search>=7.0",
    "mcp>=0.1.0",
    "APScheduler>=3.10",
    "sqlite-vec>=0.1.6",
    "watchdog>=4.0",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-mock>=3.14",
    "pytest-timeout>=2.3",
    "httpx>=0.28",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["eval: marks tests as evaluation tests (deselect with '-m \"not eval\"')"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "skills*"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
